apps/calibre-web/calibre-web-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
