apps/calibre-web/calibre-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app: calibre-web
    app.kubernetes.io/name: calibre-web
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: calibre-web
  ports:
  - name: http
    port: 8083
    targetPort: 8083
    protocol: TCP
